UI: Fix redundant scrollbars in spread editor

--- a/open-layout/app-shell/css/shell.css
+++ b/open-layout/app-shell/css/shell.css
@@ -79,7 +79,6 @@ scribus-app-shell:defined {
 
 .main-body {
   grid-area: main;
-  overflow-y: auto;
   position: relative;
   background: var(--bg-color);
   padding: 2rem;
